# aleph-notifications

./: Cargo.toml  Makefile  README.md  rustfmt.toml
contracts/subscriptions/: Cargo.toml  README.md  lib.rs
notification-service/: Cargo.toml  README.md
notification-service/src/: cli.rs  events.rs  main.rs  notifications.rs  subscriptions.rs
notification-service/src/notifications/: telegram.rs
src/: cli.rs  events.rs  main.rs  notifications.rs
src/notifications/: telegram.rs
