[package]
name = "notification_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aleph_client  = { git="https://github.com/Cardinal-Cryptography/aleph-node/", tag="r-12.1"}
anyhow = "1.0.75"
async-trait = "0.1.74"
clap = { version = "4.4.8", features = ["derive"] }
env_logger = "0.10.1"
futures = "0.3.29"
log = "0.4.20"
signal-hook = "0.3.17"
teloxide = { version = "0.12.2", features = ["macros"] }
tokio = { version = "1.34.0", features = ["full"] }
